--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,9 @@
 
 :root {
     --base-color: #111;
-    --base-bg-color: #fffff5;
+    --base-bg-color: #fffff7;
     --header-color: #00758c;
-    --main-turquoise-color: #00b3b3;
+    --main-cyan-color: #0088cc;
     --bg-turquoise-color: #deffee;
     --ex-light-grey-color: hsl(50, 10%, 90%);
     --light-grey-color: hsl(50, 10%, 75%);
@@ -63,463 +63,21 @@ a {
     font-size: 1.1em;
 }
 
-.talc {
-    text-align: center;
-}
-
-.totalWindow {
-    position: fixed;
-    width: 100vw;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    background-color: #111111;
-    opacity: 0.85;
-    z-index: 2;
-    transition: opacity 0.3s ease;
+.whiteColor {
+    color: var(--base-bg-color);
 }
 
 .hidden {
     opacity: 0;
 }
 
-.frm__wrap {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 3;
-}
-
-.form {
-    width: 500px;
-    background-color: var(--base-bg-color);
-    background-image: url(./app/assets/images/bgr2.png);
-    background-size: cover;
-    background-position: center center;
-    border-radius: 20px;
-    padding: 70px 50px 50px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: relative;
-}
-
-.closeForm {
-    position: absolute;
-    top: -25px;
-    right: -25px;
-    color: var(--ex-light-beige-color);
-    cursor: pointer;
-    transition: color 0.2s ease;
-}
-
-.closeForm:hover {
-    color: var(--light-semi-grey-color);
-}
-
-.form__input-wrap {
-    position: relative;
-    margin-bottom: 60px;
-    width: 100%;
-}
-
-.form__input {
-    width: 100%;
-    padding: 5px;
-    border-bottom: 1px solid var(--light-grey-color);
-    background-color: transparent;
-}
-
-.form__input::placeholder,
-.form__textarea::placeholder {
-    color: var(--light-grey-color);
-}
-
-.error {
-    position: absolute;
-    font-weight: 300;
-    bottom: -2em;
-    left: 5px;
-    font-size: 0.8em;
-    color: var(--red-color);
-    user-select: none;
-}
-
-.form__textarea {
-    margin-bottom: 40px;
-    background-color: var(--base-bg-color);
-    width: 100%;
-    border-radius: 3px;
-    padding: 10px;
-    border: 1px solid var(--semi-beige-color);
-    resize: none;
-    font-size: 0.9em;
-}
-
-.show {
-    display: block;
-}
-
-.header {
-    background-color: var(--base-bg-color);
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    height: 80px;
-    width: 100%;
-    opacity: 0;
-    display: flex;
-    align-items: center;
-    transition: 2s ease all;
-}
-
-.header-show {
-    opacity: 0.85;
-}
-
-.header__cont {
-    display: grid;
-    grid-template-columns: 1fr auto;
-    align-items: center;
-    width: 100%;
-    margin: 0 auto;
-    max-width: 1200px;
-}
-
-.logoBox {
-    height: 75px;
-    width: 75px;
-}
-
-.logoBox img {
-    height: 100%;
-}
-
-.navbar {
-    display: flex;
-    gap: 100px;
-    align-items: center;
-}
-
-.menu {
-    display: flex;
-    gap: 35px;
-    list-style: none;
-    text-transform: uppercase;
-}
-
-.menu li a {
-    display: block;
-    padding: 7px 0;
-    position: relative;
-    transition: 0.1s all ease;
-}
-
-.menu li a:hover {
-    color: var(--main-turquoise-color);
-}
-
-.menu li a:after {
-    content: "";
-    position: absolute;
-    top: 110%;
-    left: 50%;
-    background-color: var(--main-turquoise-color);
-    width: 0;
-    height: 2px;
-    transition: all 0.2s ease;
-}
-
-.menu li a:hover:after {
-    width: 100%;
-    left: 0;
-}
-
-.tel {
-    color: var(--main-turquoise-color);
-}
-
-.topImageBlock {
-    background-image: url(./app/assets/images/001_main.jpeg);
-    height: 100vh;
-    background-attachment: scroll;
-    background-size: cover;
-    background-position: center center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.topImageBlock__content {
-    width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
-.mainTitle {
-    text-align: left;
-    font-weight: 500;
-    font-size: 2.2em;
-    line-height: 1.3em;
-    margin-bottom: 30px;
-    color: var(--main-turquoise-color);
-}
-
-.subTitle {
-    margin-bottom: 40px;
-    font-weight: 300;
-    width: 500px;
-    font-size: 1.4em;
-    line-height: 1.5em;
-    text-align: left;
-}
-
-.wipingHide {
-    margin-left: -100px;
-    opacity: 0;
-}
-
-.wipingShow {
-    transition: 1.5s ease all;
-    opacity: 1;
-    margin-left: 0;
-}
-
-.anchorPoint {
-    position: absolute;
-    top: -80px;
-}
-
-.about {
-    background-color: var(--ex-light-beige-color);
-}
-
-.about__content {
-    max-width: 900px;
-    text-align: center;
-}
-
-.common-block,
-.common-block-only {
-    display: flex;
-    justify-content: center;
-    position: relative;
-}
-
-.common-block {
-    padding: 70px 0;
-}
-
-.hide-common {
+.hideCommon {
     opacity: 0;
     margin-top: -50px;
 }
 
-.show-common {
+.showCommon {
     transition: 1.5s ease all;
     margin-top: 0;
     opacity: 1;
-}
-
-.title {
-    padding-bottom: 30px;
-    font-weight: 500;
-    text-align: center;
-    text-transform: uppercase;
-    color: var(--main-turquoise-color);
-}
-
-.testBlock {
-    height: 1300px;
-    background-color: var(--main-turquoise-color);
-}
-
-.btn {
-    display: block;
-    padding: 12px 20px;
-    border-radius: 30px;
-    cursor: pointer;
-    width: fit-content;
-    color: var(--base-bg-color);
-    border: 1px solid var(--main-turquoise-color);
-    background-color: var(--main-turquoise-color);
-    transition: all 0.15s ease;
-}
-
-.btn:hover {
-    color: var(--main-turquoise-color);
-    border: 1px solid var(--main-turquoise-color);
-    background-color: var(--base-bg-color);
-}
-
-.btn-disabled {
-    color: var(--light-grey-color);
-    border: 1px solid var(--semi-beige-color);
-    background-color: var(--base-bg-color);
-    cursor: default;
-}
-
-.btn-disabled:hover {
-    color: var(--light-grey-color);
-    border: 1px solid var(--semi-beige-color);
-    background-color: var(--base-bg-color);
-}
-
-.services {
-    background-color: var(--base-bg-color);
-}
-
-.accordion {
-    border-bottom: 1px solid var(--light-beige-color);
-    padding-bottom: 20px;
-}
-
-.accordion:first-child {
-    margin-top: 2em;
-    border-top: 1px solid var(--light-beige-color);
-}
-
-.accordion__header {
-    margin-top: 20px;
-    display: grid;
-    grid-template-columns: 1fr auto;
-}
-
-.accordion__title {
-    margin-left: 15px;
-    font-weight: 600;
-}
-
-.openList {
-    margin-right: 15px;
-    background-color: transparent;
-    height: fit-content;
-    border-radius: 50%;
-    padding: 0 2px;
-    color: var(--main-turquoise-color);
-    transition: all 0.5s ease;
-    cursor: pointer;
-}
-
-.openList:hover {
-    background-color: var(--bg-turquoise-color);
-}
-
-.rotateBtn {
-    transform: rotate(45deg);
-}
-
-.accordion__list {
-    list-style: none;
-    font-size: 0.9em;
-    overflow: hidden;
-    transition: all ease-in-out 0.5s;
-}
-
-.list-hide {
-    max-height: 0;
-}
-
-.list-show {
-    max-height: 150px;
-}
-
-.btn-2 {
-    display: flex;
-    justify-content: center;
-    margin-top: 70px;
-}
-
-.photoBlockWrap {
-    background-color: var(--base-bg-color);
-    background-image: url(./app/assets/images/photo-block/bgr.png);
-    background-size: cover;
-    background-position: center center;
-}
-
-.photoBlock {
-    width: 100%;
-    max-width: 1200px;
-    display: grid;
-    grid-template-columns: 7fr 5fr;
-    grid-auto-rows: minmax(300px, auto);
-    gap: 5px;
-}
-
-.photoBlock-1,
-.photoBlock-2,
-.photoBlock-3,
-.photoBlock-4 {
-    background-size: cover;
-    background-position: center center;
-}
-
-.photoBlock-1 {
-    background-image: url(./app/assets/images/photo-block/01.jpg);
-    grid-row: 1;
-}
-
-.photoBlock-2 {
-    background-image: url(./app/assets/images/photo-block/02.jpg);
-    grid-row: 1/3;
-}
-
-.photoBlock-3 {
-    background-image: url(./app/assets/images/photo-block/03.jpg);
-    grid-row: 2/4;
-}
-
-.photoBlock-4 {
-    background-image: url(./app/assets/images/photo-block/04.jpg);
-    grid-row: 3;
-}
-
-.personal {
-    /*background-color: var(--base-bg-color);*/
-    background-color: #deffee;
-}
-
-.personal__content {
-    width: 100%;
-    max-width: 1200px;
-}
-
-.personalCards {
-    margin-top: 30px;
-    display: flex;
-    justify-content: space-between;
-    column-gap: 2%;
-}
-
-.personalCard {
-    border-radius: 10px;
-    width: 23.5%;
-    border: 1px solid var(--semi-beige-color);
-    padding: 20px;
-}
-
-.personName {
-    font-weight: 600;
-    font-size: .9em;
-}
-
-.personDecription {
-    font-size: .8em;
-}
-
-.person1,
-.person2,
-.person3,
-.person4 {
-    /*width: 100%;*/
-    height: 300px;
-    background-size: cover;
-    background-position: center center;
-    background-image: url(./app/assets/images/persons/fake-photo.png);
 }
