--- a/src/app/components/commonBlock/personalCards/personalCards.module.css
+++ b/src/app/components/commonBlock/personalCards/personalCards.module.css
@@ -3,8 +3,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    column-gap: 40px;
-    row-gap: 40px;
+    gap: 70px;
 }
 
 .personalCard {
@@ -12,6 +11,7 @@
     width: 35%;
     border: 1px solid var(--semi-beige-color);
     padding: 20px;
+    background-color: var(--base-bg-color);
 }
 
 .personName {
