--- a/src/app/components/header/header.module.css
+++ b/src/app/components/header/header.module.css
@@ -9,7 +9,7 @@
     opacity: 0;
     display: flex;
     align-items: center;
-    transition: 2s ease all;
+    transition: 1s ease all;
 }
 
 .headerShow {
@@ -18,6 +18,7 @@
 
 .headerFullShow {
     opacity: 1;
+    box-shadow: 0 0 45px 0 var(--light-grey-color);
 }
 
 .header__content {
@@ -27,11 +28,11 @@
     width: 100%;
     margin: 0 auto;
     max-width: 1200px;
+    padding: 0 10px;
 }
 
 .logoBox {
-    height: 75px;
-    width: 75px;
+    height: 70px;
 }
 
 .logoBox img {
@@ -40,11 +41,25 @@
 
 .menuAndPhoneWrap {
     display: flex;
-    gap: 50px;
+    gap: 25px;
     align-items: center;
 }
 
 .phone {
     color: var(--main-cyan-color);
     font-size: 1.1em;
+}
+
+@media screen and (max-width: 960px) {
+    .header {
+        opacity: 1;
+        background: transparent;
+        box-shadow: none;
+    }
+    .menuAndPhoneWrap {
+        display: none;
+    }
+    .logoBox {
+        display: none;
+    }
 }
