--- a/src/app/components/topImageBlock/topImageBlock.module.css
+++ b/src/app/components/topImageBlock/topImageBlock.module.css
@@ -4,33 +4,37 @@
     background-attachment: scroll;
     background-size: cover;
     background-position: center center;
+    background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
+@media screen and (max-width: 960px) {
+}
+
 .topImageBlock__content {
-    width: 100%;
     max-width: 1200px;
-    margin: 0 auto;
+    padding: 0 10px;
+}
+
+.leftBlockWrap {
+    width: 45%;
 }
 
 .mainTitle {
-    text-align: left;
+    margin-bottom: 30px;
     font-weight: 500;
     font-size: 2.2em;
     line-height: 1.3em;
-    margin-bottom: 30px;
     color: var(--main-cyan-color);
 }
 
 .subTitle {
     margin-bottom: 40px;
     font-weight: 300;
-    width: 500px;
     font-size: 1.4em;
     line-height: 1.5em;
-    text-align: left;
 }
 
 .wipingHide {
