--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
 
 :root {
     --base-color: #111;
     --base-bg-color: #fffff7;
-    --header-color: #00758c;
     --main-cyan-color: #0088cc;
+    --gold-color: #edb12f;
     --bg-turquoise-color: #deffee;
     --ex-light-grey-color: hsl(50, 10%, 90%);
     --light-grey-color: hsl(50, 10%, 75%);
@@ -42,7 +40,7 @@ body {
     font-weight: 400;
     color: var(--base-color);
     font-size: 18px;
-    line-height: 1.6em;
+    line-height: 1.5em;
 }
 
 input,
@@ -68,6 +66,38 @@ a {
 }
 
 .hidden {
+    display: none;
+}
+
+.darkTotalWindow {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background-color: var(--base-color);
+    opacity: 0.9;
+    transition: opacity 0.3s ease;
+    z-index: 2;
+}
+
+.no_wrap {
+    white-space: nowrap;
+}
+
+.transparentTotalWindow {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 3;
+}
+
+.transparent {
     opacity: 0;
 }
 
@@ -80,4 +110,10 @@ a {
     transition: 1.5s ease all;
     margin-top: 0;
     opacity: 1;
+}
+
+@media screen and (max-width: 960px) {
+    html {
+        -webkit-text-size-adjust: none;
+    }
 }
