--- a/src/app/components/commonBlockOnly/advantages/advantages.module.css
+++ b/src/app/components/commonBlockOnly/advantages/advantages.module.css
@@ -37,3 +37,10 @@
 .imgBlock img {
     width: 100%;
 }
+
+@media screen and (max-width: 960px) {
+    .advantage {
+        width: 80%;
+        margin: 0 auto;
+    }
+}
