--- a/src/app/components/consultForm/consultForm.module.css
+++ b/src/app/components/consultForm/consultForm.module.css
@@ -1,5 +1,6 @@
 .form {
     width: 500px;
+    max-width: 80%;
     background-color: var(--base-bg-color);
     background-image: url(../../assets/images/bgr2.png);
     background-size: cover;
