--- a/src/app/components/header/burgerMenu/burgerMenu.module.css
+++ b/src/app/components/header/burgerMenu/burgerMenu.module.css
@@ -1,8 +1,8 @@
 
 .burger {
-    width: 60px;
     color: var(--base-color);
     cursor: pointer;
+    margin-bottom: 10px;
 }
 
 .burgerMenuWrap {
@@ -18,12 +18,16 @@
     list-style: none;
     background-color: var(--base-bg-color);
     opacity: .85;
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: flex-end;
     padding: 30px;
     text-transform: uppercase;
     border-radius: 5px;
+}
+
+.burgerMenuVisible {
+    display: flex;
 }
 
 .burgerMenu li {
