--- a/src/app/components/commonBlock/commonBlock.module.css
+++ b/src/app/components/commonBlock/commonBlock.module.css
@@ -1,6 +1,7 @@
 .commonBlock {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     position: relative;
     padding: 70px 0;
 }
@@ -10,11 +11,12 @@
     font-weight: 500;
     text-align: center;
     text-transform: uppercase;
-    color: var(--main-cyan-color);
+    color: var(--main-brown-color);
 }
 
 .about {
-    background-color: var(--main-cyan-color);
+    /*background-color: var(--main-brown-color);*/
+    background-image: url(../../assets/images/photo-block/bgr.png);
 }
 
 .about__content {
@@ -24,11 +26,15 @@
 }
 
 .about .title {
-    color: var(--base-bg-color);
+    /*color: var(--base-bg-color);*/
 }
 
 .services {
     background-color: var(--ex-light-beige-color);
+}
+
+.services__content {
+    padding: 0 10px;
 }
 
 .personal {
@@ -61,4 +67,10 @@
     max-width: 1200px;
     text-align: center;
     padding: 0 10px;
+}
+
+@media screen and (max-width: 640px) {
+    .commonBlock {
+        padding: 50px 0;
+    }
 }
