--- a/src/app/components/commonBlock/reviews/reviews.module.css
+++ b/src/app/components/commonBlock/reviews/reviews.module.css
@@ -3,13 +3,6 @@
     padding: 0 50px;
 }
 
-.mobile {
-    display: none;
-    position: absolute;
-    width: 0;
-    height: 0;
-}
-
 .reviewsWindow {
     width: 100%;
     overflow: hidden;
@@ -18,7 +11,6 @@
 .reviews {
     display: flex;
     transition: all 1s ease;
-    background-color: white;
 }
 
 .reviewWrap {
@@ -74,8 +66,15 @@
     color: var(--semi-beige-color);
 }
 
-@media screen and (max-width: 960px) {
-    .mobile {
-        display: block;
+@media screen and (max-width: 640px) {
+    .reviewWrap {
+        padding: 10px;
+    }
+    .reviewName {
+        font-size: .9em;
+    }
+    .reviewContent {
+        font-size: .8em;
+        line-height: 1.6em;
     }
 }
