--- a/src/app/components/commonBlock/services/services.module.css
+++ b/src/app/components/commonBlock/services/services.module.css
@@ -1,3 +1,9 @@
+.subtitle {
+    font-size: 1.1em;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
 .accordion {
     border-bottom: 1px solid var(--light-beige-color);
     padding-bottom: 20px;
@@ -25,7 +31,7 @@
     height: fit-content;
     border-radius: 50%;
     padding: 0 2px;
-    color: var(--main-cyan-color);
+    color: var(--main-brown-color);
     transition: all 0.5s ease;
     cursor: pointer;
 }
@@ -51,4 +57,16 @@
 
 .listShow {
     max-height: 150px;
+}
+
+.btnWrap {
+    display: flex;
+    justify-content: center;
+    margin-top: 70px;
+}
+
+@media screen and (max-width: 640px) {
+    .btnWrap {
+        margin-top: 50px;
+    }
 }
