--- a/src/app/components/commonBlockOnly/commonBlockOnly.module.css
+++ b/src/app/components/commonBlockOnly/commonBlockOnly.module.css
@@ -6,11 +6,23 @@
 
 .photoBlockWrap {
     background-color: var(--base-bg-color);
-    background-image: url(../../assets/images/photo-block/bgr.png);
+    /*background-image: url(../../assets/images/photo-block/bgr.png);*/
     background-size: cover;
     background-position: center center;
 }
 
 .advantagesWrap {
-    padding: 70px 10px;
+    padding: 70px 20px;
+}
+
+@media screen and (max-width: 1200px) {
+    .advantagesWrap {
+        padding: 70px 30px;
+    }
+}
+
+@media screen and (max-width: 640px) {
+    .advantagesWrap {
+        padding: 50px 10px;
+    }
 }
