--- a/src/app/components/consultForm/consultForm.module.css
+++ b/src/app/components/consultForm/consultForm.module.css
@@ -50,7 +50,7 @@
     font-weight: 300;
     bottom: -2em;
     left: 5px;
-    font-size: 0.8em;
+    font-size: 0.75em;
     color: var(--red-color);
     user-select: none;
 }
@@ -63,4 +63,21 @@
     padding: 10px;
     border: 1px solid var(--semi-beige-color);
     resize: none;
+}
+
+@media screen and (max-width: 640px) {
+    .form {
+        padding: 20px 20px 30px;
+        position: absolute;
+    }
+    .form__inputWrap {
+        margin-bottom: 20px;
+    }
+    .form__textarea {
+        margin-bottom: 0;
+    }
+    .form__input::placeholder,
+    .form__textarea::placeholder {
+        font-size: .8em;
+    }
 }
