--- a/src/app/components/commonBlockOnly/commonBlockOnly.module.css
+++ b/src/app/components/commonBlockOnly/commonBlockOnly.module.css
@@ -1,19 +1,19 @@
 .commonBlockOnly {
-    display: flex;
-    justify-content: center;
-    position: relative;
-}
-
-.photoBlockWrap {
     background-color: var(--base-bg-color);
-    /*background-image: url(../../assets/images/photo-block/bgr.png);*/
-    background-size: cover;
-    background-position: center center;
 }
 
 .advantagesWrap {
+    margin: 0 auto;
+    max-width: 1200px;
     padding: 70px 20px;
 }
+
+.photoBlockWrap {
+    margin: 0 auto;
+    max-width: 1200px;
+}
+
+
 
 @media screen and (max-width: 1200px) {
     .advantagesWrap {
