--- a/src/app/components/topImageBlock/topImageBlock.module.css
+++ b/src/app/components/topImageBlock/topImageBlock.module.css
@@ -4,6 +4,7 @@
 
 .topImageBlock {
     height: 100vh;
+    background-color: var(--base-bg-color);
     background-image: url(../../assets/images/001_main.png);
     background-attachment: scroll;
     background-size: cover;
@@ -79,6 +80,7 @@
     }
 
     .topImageBlock__content {
+        background-color: var(--base-bg-color);
         position: relative;
         padding: 30px;
     }
