--- a/src/app/components/commonBlockOnly/commonBlockOnly.module.css
+++ b/src/app/components/commonBlockOnly/commonBlockOnly.module.css
@@ -1,19 +1,21 @@
 .commonBlockOnly {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: var(--base-bg-color);
 }
 
 .advantagesWrap {
-    margin: 0 auto;
+    width: 100%;
     max-width: 1200px;
     padding: 70px 20px;
 }
 
 .photoBlockWrap {
-    margin: 0 auto;
+    margin: 0;
+    width: 100%;
     max-width: 1200px;
 }
-
-
 
 @media screen and (max-width: 1200px) {
     .advantagesWrap {
