--- a/src/app/components/commonBlock/services/services.module.css
+++ b/src/app/components/commonBlock/services/services.module.css
@@ -40,6 +40,10 @@
     background-color: var(--base-bg-color);
 }
 
+.openList:active {
+    background: none;
+}
+
 .rotateBtn {
     transform: rotate(45deg);
 }
