--- a/src/app/components/consultForm/consultForm.module.css
+++ b/src/app/components/consultForm/consultForm.module.css
@@ -1,11 +1,11 @@
 .form {
     width: 500px;
-    max-width: 80%;
+    margin-left: -100%;
+    max-width: 90%;
     background-color: var(--base-bg-color);
     background-image: url(../../assets/images/bgr2.png);
     background-size: cover;
     background-position: center center;
-    border-radius: 20px;
     padding: 70px 50px 50px;
     display: flex;
     flex-direction: column;
@@ -13,10 +13,15 @@
     position: relative;
 }
 
+.formNormal {
+    margin-left: 0;
+    transition: 1s ease all;
+}
+
 .closeForm {
     position: absolute;
-    top: -25px;
-    right: -25px;
+    top: -30px;
+    right: -30px;
     color: var(--ex-light-beige-color);
     cursor: pointer;
     transition: color 0.2s ease;
@@ -67,8 +72,8 @@
 
 @media screen and (max-width: 640px) {
     .form {
+        margin-top: 35px;
         padding: 20px 20px 30px;
-        position: absolute;
     }
     .form__inputWrap {
         margin-bottom: 20px;
