--- a/src/index.css
+++ b/src/index.css
@@ -69,14 +69,6 @@ a {
     color: var(--main-peach-color);
 }
 
-.hidden {
-    display: none;
-}
-
-.transparent {
-    opacity: 0;
-}
-
 .no_wrap {
     white-space: nowrap;
 }
@@ -88,19 +80,17 @@ a {
     top: 0;
     left: 0;
     background-color: var(--base-color);
-    opacity: 0.9;
-    transition: opacity 0.3s ease;
+    opacity: 0.93;
+    transition: opacity 1s ease;
     z-index: 2;
 }
 
 .transparentTotalWindow {
-    position: fixed;
-    top: 0;
-    left: 0;
+    position: absolute;
     height: 100vh;
-    width: 100vw;
+    width: fit-content;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     z-index: 3;
 }
@@ -116,6 +106,14 @@ a {
     opacity: 1;
 }
 
+.hidden {
+    display: none;
+}
+
+.transparent {
+    opacity: 0;
+}
+
 @media screen and (max-width: 960px) {
     html {
         -webkit-text-size-adjust: none;
@@ -124,6 +122,7 @@ a {
 
 @media screen and (max-width: 640px) {
     .transparentTotalWindow {
-        position: absolute;
+        display: block;
+        width: 100%;
     }
 }
