--- a/src/app/components/commonBlockOnly/advantages/advantages.module.css
+++ b/src/app/components/commonBlockOnly/advantages/advantages.module.css
@@ -15,7 +15,7 @@
     padding-right: 30px;
 }
 
-.title {
+.subTitle {
     font-weight: 500;
     font-size: 1.15em;
     color: var(--main-brown-color);
