--- a/src/app/components/header/burgerMenu/burgerMenu.module.css
+++ b/src/app/components/header/burgerMenu/burgerMenu.module.css
@@ -2,41 +2,34 @@
 .burger {
     color: var(--base-color);
     cursor: pointer;
-    margin-bottom: 10px;
+    margin-bottom: 2px;
 }
 
 .burgerMenuWrap {
     display: none;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    flex-direction: column;
-    align-items: flex-end;
+    position: relative;
+    margin-top: 10px;
 }
 
 .burgerMenu {
+    position: absolute;
+    width: max-content;
     list-style: none;
     background-color: var(--base-bg-color);
     opacity: 0;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    padding: 0;
-    height: 0;
-    overflow: hidden;
-    text-transform: uppercase;
+    padding: 30px;
     color: var(--main-brown-color);
-    margin-top: -100px;
-    margin-right: -100%;
+    top: 100%;
+    right: -600%;
     transition: all .4s ease;
 }
 
 .burgerMenuVisible {
-    padding: 30px;
-    height: auto;
-    margin-top: 0;
-    margin-right: 0;
-    opacity: .92;
+    right: -10px;
+    opacity: 1;
 }
 
 .burgerMenu li {
@@ -54,6 +47,6 @@
 
 @media screen and (max-width: 960px) {
     .burgerMenuWrap {
-        display: flex;
+        display: block;
     }
 }
