--- a/src/app/components/header/menu/menu.module.css
+++ b/src/app/components/header/menu/menu.module.css
@@ -2,7 +2,9 @@
     display: flex;
     gap: 20px;
     list-style: none;
-    text-transform: uppercase;
+    /*text-transform: uppercase;*/
+    font-size: .95em;
+    font-weight: 500;
 }
 
 .menu li a {
@@ -30,4 +32,10 @@
 .menu li a:hover:after {
     width: 100%;
     left: 0;
+}
+
+@media screen and (max-width: 960px) {
+    .nav {
+        display: none;
+    }
 }
