--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,8 @@
     /*--main-cyan-color: #0088cc;*/
     --gold-color: #edb12f;
     --bg-turquoise-color: #deffee;
-    --ex-light-grey-color: hsl(50, 10%, 90%);
+    --ex-light-grey-color: hsl(50, 20%, 95%);
+    --exx-light-grey-color: hsl(50, 20%, 97%);
     --light-grey-color: hsl(50, 10%, 75%);
     --light-semi-grey-color: #aaa;
     --semi-grey-color: #888;
