--- a/src/app/components/commonBlock/services/services.module.css
+++ b/src/app/components/commonBlock/services/services.module.css
@@ -25,6 +25,17 @@
     font-weight: 600;
 }
 
+.spanLink {
+    color: var(--main-brown-color);
+    text-decoration: underline;
+    cursor: pointer;
+    font-weight: 500;
+}
+
+.spanLink:hover {
+    text-decoration: none;
+}
+
 .openList {
     margin-right: 15px;
     background-color: transparent;
@@ -49,6 +60,7 @@
 }
 
 .accordion__list {
+    margin-left: 15px;
     list-style: none;
     font-size: 0.9em;
     overflow: hidden;
@@ -60,7 +72,7 @@
 }
 
 .listShow {
-    max-height: 150px;
+    max-height: 200px;
 }
 
 .btnWrap {
