--- a/src/app/components/commonBlock/personalCards/personalCards.module.css
+++ b/src/app/components/commonBlock/personalCards/personalCards.module.css
@@ -41,16 +41,19 @@
     }
 }
 
+@media screen and (max-width: 480px) {
+    .personalCard {
+        width: 90%;
+        margin: 0 auto;
+    }
+}
+
 @media screen and (max-width: 640px) {
     .personalCard {
         width: 70%;
         margin: 0 auto;
     }
-}
-
-@media screen and (max-width: 480px) {
-    .personalCard {
-        width: 90%;
-        margin: 0 auto;
+    .description {
+        font-size: 0.75em;
     }
 }
